--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   "ConnectionStrings": {
     "RamasConnection": "Data Source=RAMAS\\SQLEXPRESS;Initial Catalog=Book_Rew;Integrated Security=True;Encrypt=False;TrustServerCertificate=true",
     "KestutisConnection": "Data Source=RAMAS\\SQLEXPRESS;Initial Catalog=Book_Rew;Integrated Security=True;Encrypt=False;TrustServerCertificate=true",
-    "TadeushConnection": "Data Source=RAMAS\\SQLEXPRESS;Initial Catalog=Book_Rew;Integrated Security=True;Encrypt=False;TrustServerCertificate=true",
+    "TadeushConnection": "Data Source=TEKLIANLI\\SQLEXPRESS;Initial Catalog=Book_Rew;Integrated Security=True;Encrypt=False;TrustServerCertificate=true",
     "AugustasConnection": "Data Source=RAMAS\\SQLEXPRESS;Initial Catalog=Book_Rew;Integrated Security=True;Encrypt=False;TrustServerCertificate=true"
   },
   "AllowedHosts": "*",
